# RefraEngine

./: CMakeLists.txt
Assets/Models/: boxes.mtl
Assets/Shaders/: cubeShaderF.fragment  cubeShaderV.vertex
ExternalDependencies/include/glad/: glad.h
Headers/: Camera.h  Input.h  KeyCode.h  Mesh.h  MeshLoader.h  Model.h  Render.h  Renderer.h  Shader.h  Texture.h  VertexData.h  Window.h  cube.h  stb_image.h
Source/: Camera.cpp  Input.cpp  Mesh.cpp  MeshLoader.cpp  Model.cpp  RefraEngine.cpp  Render.cpp  Shader.cpp  Texture.cpp  VertexData.cpp  Window.cpp  glad.c
